添加新闻详情界面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     // recyclerview-animators
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+    // html text
+    compile 'com.zzhoujay.richtext:richtext:2.0.9'
 }
