--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.dl7.myapp"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.dl7.myapp">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".module.detail.NewsDetailActivity">
+        </activity>
+        <activity android:name=".module.special.SpecialActivity">
         </activity>
     </application>
 
