--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.dl7.myapp">
+<manifest package="com.dl7.myapp"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -24,6 +24,8 @@
         <activity android:name=".module.detail.NewsDetailActivity">
         </activity>
         <activity android:name=".module.special.SpecialActivity">
+        </activity>
+        <activity android:name=".module.photo.PhotoSetActivity">
         </activity>
     </application>
 
