添加栏目管理界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".module.photo.PhotoSetActivity">
         </activity>
+        <activity android:name=".module.manage.ManageActivity">
+        </activity>
     </application>
 
 </manifest>
