--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,32 +24,32 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    // leakcanary
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
-    // butterknife
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    // rxjava
-    // dagger
-    apt 'com.google.dagger:dagger-compiler:2.6'
-    // retrofit
-    // logger
-    // greendao
-    // glide
     compile project(':RecyclerViewHelper')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+
+    // leakcanary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
+    // butterknife
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jakewharton:butterknife:8.2.1'
+    // rxjava
     compile 'io.reactivex:rxjava:1.1.9'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
+    // dagger
+    apt 'com.google.dagger:dagger-compiler:2.6'
     compile 'com.google.dagger:dagger:2.6'
+    // retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    // logger
     compile 'com.orhanobut:logger:1.15'
+    // greendao
     compile 'org.greenrobot:greendao:3.1.0'
     //    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:design:23.4.0'
@@ -67,4 +67,6 @@ dependencies {
     // LabelView
     compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
+    // systembartint
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
