--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc2"
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "com.dl7.myapp"
@@ -12,6 +12,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        renderscriptTargetApi 23
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -29,7 +31,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
-
+    compile 'com.android.support:design:23.4.0'
     // leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
@@ -51,8 +53,6 @@ dependencies {
     compile 'com.orhanobut:logger:1.15'
     // greendao
     compile 'org.greenrobot:greendao:3.1.0'
-    //    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.android.support:design:23.4.0'
     // circleimageview
     compile 'de.hdodenhof:circleimageview:2.1.0'
     // slider
@@ -66,7 +66,12 @@ dependencies {
     compile 'com.zzhoujay.richtext:richtext:2.0.9'
     // LabelView
     compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
+    // photoview
     compile 'com.github.chrisbanes.photoview:library:1.2.4'
     // systembartint
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    //    // dragsloplayout
+    //    compile 'com.dl7.drag:dragsloplayout:1.0.1'
+//    compile project(':dragsloplayout')
+    compile 'com.dl7.drag:dragsloplayout:1.0.1'
 }
