添加收藏界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,8 @@
         </activity>
         <activity android:name=".module.bigphoto.BigPhotoActivity">
         </activity>
+        <activity android:name=".module.love.LoveActivity">
+        </activity>
     </application>
 
 </manifest>
