--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,9 +36,9 @@
         </activity>
         <activity
             android:name=".module.photoset.PhotoSetActivity"
-            android:theme="@style/AppBaseTheme.PhotoSetTheme"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppBaseTheme.PhotoSetTheme">
         </activity>
         <activity
             android:name=".module.channel.ChannelActivity"
@@ -65,6 +65,8 @@
             android:name=".module.setting.SettingsActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".module.videos.VideosActivity">
         </activity>
     </application>
 
