--- a/downloaderLib/build.gradle
+++ b/downloaderLib/build.gradle
@@ -16,14 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+//    lintOptions {
+//        abortOnError false
+//    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    //
-    compile 'com.github.ybq:Android-SpinKit:1.1.0'
+    // okhttp
+    compile 'com.squareup.okhttp3:okhttp:3.3.0'
 }
