--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'android-apt'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "com.dl7.myapp"
+        applicationId "com.dl7.mvp"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         renderscriptTargetApi 23
@@ -32,11 +32,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     // leakcanary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
@@ -85,6 +85,11 @@ dependencies {
     compile 'com.github.Rukey7:IjkPlayerView:v1.0.2'
     // shinebutton
     compile 'com.sackcentury:shinebutton:0.1.6'
+    // tablayout
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar'
+    // Dialog
+    compile 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
     compile project(':RecyclerViewHelper')
     compile project(':downloaderLib')
+    compile project(':taglayout')
 }
