--- a/taglayout/build.gradle
+++ b/taglayout/build.gradle
@@ -20,10 +20,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
-    //
-    compile 'com.github.ybq:Android-SpinKit:1.1.0'
+    testCompile 'junit:junit:4.12'
 }
