更新下载功能

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'com.antfortune.freeline'
 
 android {
     compileSdkVersion 24
