--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppBaseTheme">
+        <!-- android:configChanges="orientation|keyboardHidden|screenSize"要加上，不然播放视频翻转后会回收HomeActivity -->
         <activity
             android:name=".module.home.HomeActivity"
-            android:windowSoftInputMode="stateHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -48,6 +49,7 @@
         </activity>
         <activity
             android:name=".module.manage.love.LoveActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait">
         </activity>
         <activity
@@ -60,6 +62,7 @@
             android:theme="@style/AppBaseTheme.TranslucentStatus">
         </activity>
         <activity android:name=".module.manage.download.DownloadActivity"
+                  android:configChanges="orientation|keyboardHidden|screenSize"
                   android:screenOrientation="portrait">
         </activity>
         <activity android:name=".module.video.fullscreen.VideoFullscreenActivity">
