更新activity切换动画处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".module.photo.photoset.PhotoSetActivity"
+            android:name=".module.news.photoset.PhotoSetActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppBaseTheme.TranslucentStatus">
         </activity>
