--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,6 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        renderscriptTargetApi 23
-        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -81,7 +79,7 @@ dependencies {
     // systembartint
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     // dragsloplayout
-    compile 'com.dl7.drag:dragsloplayout:1.0.1'
+    compile 'com.github.Rukey7:DragSlopLayout:1.0.3'
     // androidtagview
     compile 'co.lujun:androidtagview:1.0.3'
     // filepicker
