--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,10 +95,9 @@ dependencies {
     // Dialog
     compile 'com.flyco.dialog:FlycoDialog_Lib:1.3.2@aar'
     // change skin
-    compile 'com.zhy:changeskin:4.0.2'
+    //    compile 'com.zhy:changeskin:4.0.2'
     // fast json
     compile 'com.alibaba:fastjson:1.2.23'
-
     compile project(':RecyclerViewHelper')
     compile project(':downloaderLib')
     compile project(':playerview')
