--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppBaseTheme">
+
         <!-- android:configChanges="orientation|keyboardHidden|screenSize"要加上，不然播放视频翻转后会回收HomeActivity -->
         <activity
             android:name=".module.home.HomeActivity"
@@ -60,11 +61,14 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
-        <activity android:name=".module.manage.download.DownloadActivity"
-                  android:configChanges="orientation|keyboardHidden|screenSize"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".module.manage.download.DownloadActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".module.video.fullscreen.VideoFullscreenActivity">
+        </activity>
+        <activity android:name=".module.news.article.NewsArticleActivity">
         </activity>
     </application>
 
