--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':RecyclerViewHelper', ':downloaderLib', ':playerview'
+include ':app', ':RecyclerViewHelper', ':downloaderLib', ':playerview', ':tinkerLib'
